# indexedfastq

./: .gitignore  README.md  setup.py
cindexedfastq/: CMakeLists.txt  cindexedfastq.c  config.h.in  findfastq.c  ifq.c  ifq.h  indexfastq.c  indexfastq.h  indexing.c  indexing.h
cindexedfastq/lib/bgzf/: bgzf.c  bgzf.h  khash.h
cindexedfastq/lib/cmph/src/: config.h
indexedfastq/: __init__.py  indexedfastq.py
indexedfastq/tools/: run_indexfastq.py
